2.7.0:

2004-06-24  Murray Cumming  <murrayc@.com>

	* configure.in, Makefile.am, libxml++-2.*.pc.in: Reverted the changes
	that made it install a 2.8 pc.in file, and which decreased the .so
	name. 2.8 is not parallel-installable with 2.6, and this would only 
	have been a half-done transition if it was.

2004-06-22  Murray Cumming  <murrayc@murrayc.com>

	* libxml++/io/outputbuffer.cc, inputbuffer.cc: 
	Added include of libxml/globals.h before include of libxml/xmlIO.h, 
	because xmlIO.h needs the definition of 
	xmlParserInputBufferCreateFilenameFunc.

2004-05-28  Christophe de Vienne <cdevienne@netcourrier>

	* configure.in, examples/Makefile.am, examples/dtdvalidation/Makefile.am,
	examples/dtdvalidation/example.dtd, examples/dtdvalidation/main.cc,
	libxml++/Makefile.am, libxml++/dtd.[h|cc], libxml++/io/Makefile.am,
	libxml++/io/istreamparserinputbuffer.[h|cc],
	libxml++/io/parserinputbuffer.[h|cc],
	libxml++/libxml++.h, libxml++/validators/Makefile.am,
	libxml++/validators/dtdvalidator.[h|cc]
	libxml++/validators/validator.[h|cc]:
	Integrated dtdvalidator patch proposed by Guillaume Arreckx.
	Modified a bit the patch:
	- renamed *.cpp -> *.cc
	- fixed a few comments which where copy/paste from other files
	- replaced std::string with Glib::ustring
	- Added Dtd::cobj, since the patch rely on it.
	- added a validaty_error as suggested by jon


2004-04-26  Christophe de VIENNE  <cdevienne@netcourrier.com>

	* libxml++/nodes/contentnode.cc: Fixed set_content which used xmlNodeAddContent
	instead of xmlNodeSetContent (thanks to Marcello Orizi who outlined it).

2004-05-05  Christophe de Vienne  <cdevienne@netcourrier.com>

	* libxml++/parsers/saxparser.cc: One more (last one I hope) change
	about Glib::ustring instanciation from a buffer + lenght. We now
	use Glib::ustring::ustring(In begin, In end) constructor. Thanks to
	Jonathan Wakely.

2004-05-04  Christophe de Vienne  <cdevienne@netcourrier.com>

	* libxml++/parsers/saxparser.cc: Replaced again the use of