@@ -105,6 +105,9 @@ void DomParser::parse_context()
   }
 
   doc_ = new Document(context_->myDoc);
+  // This is to indicate to release_underlying that we took the
+  // ownership on the doc.
+  context_->myDoc = NULL;
 
   //Free the parse context, but keep the document alive so people can navigate the DOM tree:
   //TODO: Why not keep the context alive too?
@@ -164,6 +167,10 @@ void DomParser::parse_stream(std::istream& in)
   }
 
   doc_ = new Document(context_->myDoc);
+  // This is to indicate to release_underlying that we took the
+  // ownership on the doc.
+  context_->myDoc = NULL;
+
 
   //Free the parse context, but keep the document alive so people can navigate the DOM tree:
   //TODO: Why not keep the context alive too?
